@@ -12,32 +12,18 @@
 
 package com.zfoo.protocol.registration;
 
-import com.zfoo.protocol.IPacket;
 import com.zfoo.protocol.ProtocolManager;
+import com.zfoo.protocol.anno.Compatible;
+import com.zfoo.protocol.anno.Protocol;
 import com.zfoo.protocol.collection.ArrayUtils;
 import com.zfoo.protocol.collection.CollectionUtils;
 import com.zfoo.protocol.exception.RunException;
 import com.zfoo.protocol.exception.UnknownException;
 import com.zfoo.protocol.generate.GenerateOperation;
 import com.zfoo.protocol.generate.GenerateProtocolFile;
-import com.zfoo.protocol.generate.GenerateProtocolNote;
-import com.zfoo.protocol.generate.GenerateProtocolPath;
-import com.zfoo.protocol.registration.anno.Compatible;
-import com.zfoo.protocol.registration.anno.Protocol;
 import com.zfoo.protocol.registration.field.*;
-import com.zfoo.protocol.serializer.cpp.GenerateCppUtils;
-import com.zfoo.protocol.serializer.csharp.GenerateCsUtils;
-import com.zfoo.protocol.serializer.gdscript.GenerateGdUtils;
-import com.zfoo.protocol.serializer.go.GenerateGoUtils;
-import com.zfoo.protocol.serializer.javascript.GenerateJsUtils;
-import com.zfoo.protocol.serializer.lua.GenerateLuaUtils;
-import com.zfoo.protocol.serializer.protobuf.GenerateProtobufUtils;
 import com.zfoo.protocol.serializer.reflect.*;
-import com.zfoo.protocol.serializer.typescript.GenerateTsUtils;
-import com.zfoo.protocol.util.AssertionUtils;
-import com.zfoo.protocol.util.ClassUtils;
-import com.zfoo.protocol.util.ReflectionUtils;
-import com.zfoo.protocol.util.StringUtils;
+import com.zfoo.protocol.util.*;
 import com.zfoo.protocol.xml.XmlProtocols;
 import javassist.CannotCompileException;
 import javassist.NotFoundException;
@@ -45,36 +31,54 @@ import javassist.NotFoundException;
 import java.io.IOException;
 import java.lang.reflect.*;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.zfoo.protocol.ProtocolManager.*;
 
 /**
  * @author godotg
- * @version 3.0
  */
 public class ProtocolAnalysis {
 
-    // 临时变量，启动完成就会销毁，协议Id对应的Class类
-    private static final Map<Short, Class<?>> protocolClassMap = new HashMap<>(MAX_PROTOCOL_NUM);
+    /**
+     * EN: Temp field will be destroyed after startup, and the class corresponding to the protocolId
+     * CN: 临时变量，启动完成就会销毁，协议Id对应的Class类
+     */
+    private static Map<Short, Class<?>> protocolClassMap = new HashMap<>(MAX_PROTOCOL_NUM);
 
-    // 临时变量，启动完成就会销毁，协议下包含的子协议，只包含一层子协议
+    /**
+     * EN: Temp field, sub protocols
+     * CN: 临时变量，启动完成就会销毁，协议下包含的子协议，只包含一层子协议
+     */
     private static Map<Short, Set<Short>> subProtocolIdMap = new HashMap<>(MAX_PROTOCOL_NUM);
 
-    // 临时变量，启动完成就会销毁，协议名称保留字符，即协议的名称不能用以下名称命名
-    private static Set<String> protocolReserved = Set.of("Buffer", "ByteBuf", "ByteBuffer", "LittleEndianByteBuffer", "NormalByteBuffer"
-            , "IPacket", "IProtocolRegistration", "ProtocolManager", "IFieldRegistration"
+    /**
+     * EN: Temp field, name reserved keywords, The name of the protocol cannot be named with the following name
+     * CN: 临时变量，启动完成就会销毁，协议名称保留字符，即协议的名称不能用以下名称命名
+     */
+    private static Set<String> protocolReserved = Set.of("IProtocol", "IProtocolRegistration", "ProtocolManager", "IFieldRegistration"
+            , "Buffer", "ByteBuf", "IByteBuffer", "ByteBuffer", "LittleEndianByteBuffer", "NormalByteBuffer"
             , "ByteBufUtils", "ArrayUtils", "CollectionUtils"
             , "Boolean", "Byte", "Short", "Integer", "Long", "Float", "Double", "String", "Character", "Object"
-            , "Collections", "Iterator", "List", "ArrayList", "Map", "HashMap", "Set", "HashSet");
+            , "Collections", "Iterator", "List", "ArrayList", "Map", "HashMap", "Set", "HashSet"
+            , "DecodedPacketInfo", "EncodedPacketInfo"
+            , "Protocols");
 
-    // 临时变量，启动完成就会销毁，是一个基本类型序列化器
+    /**
+     * EN: Temp field, unsupported type
+     * CN: 临时变量，启动完成就会销毁，不支持的类型
+     */
+    private static Set<Class<?>> unsupportedTypes = Set.of(char.class, Character.class);
+
+    /**
+     * EN: Temp field, base type serializer
+     * CN: 临时变量，启动完成就会销毁，是基本类型序列化器
+     */
     private static Map<Class<?>, ISerializer> baseSerializerMap = new HashMap<>(128);
 
     static {
         // 初始化基础类型序列化器
-        baseSerializerMap.put(boolean.class, BooleanSerializer.INSTANCE);
-        baseSerializerMap.put(Boolean.class, BooleanSerializer.INSTANCE);
+        baseSerializerMap.put(boolean.class, BoolSerializer.INSTANCE);
+        baseSerializerMap.put(Boolean.class, BoolSerializer.INSTANCE);
         baseSerializerMap.put(byte.class, ByteSerializer.INSTANCE);
         baseSerializerMap.put(Byte.class, ByteSerializer.INSTANCE);
         baseSerializerMap.put(short.class, ShortSerializer.INSTANCE);
@@ -87,143 +91,234 @@ public class ProtocolAnalysis {
         baseSerializerMap.put(Float.class, FloatSerializer.INSTANCE);
         baseSerializerMap.put(double.class, DoubleSerializer.INSTANCE);
         baseSerializerMap.put(Double.class, DoubleSerializer.INSTANCE);
-        baseSerializerMap.put(char.class, CharSerializer.INSTANCE);
-        baseSerializerMap.put(Character.class, CharSerializer.INSTANCE);
         baseSerializerMap.put(String.class, StringSerializer.INSTANCE);
     }
 
     /**
-     * 真正的注册协议，将协议id和协议信息关联起来
+     * parse protocol type
      */
     public static synchronized void analyze(Set<Class<?>> protocolClassSet, GenerateOperation generateOperation) {
-        AssertionUtils.notNull(subProtocolIdMap, "[{}]已经初始完成，请不要重复初始化", ProtocolManager.class.getSimpleName());
-        try {
-            // 检查协议类是否合法
-            for (var protocolClass : protocolClassSet) {
-                var protocolId = getProtocolIdAndCheckClass(protocolClass);
-                AssertionUtils.isTrue(protocolId >= 0, "[class:{}]必须使用注解@Protocol注解标注或者使用[{}]字段", protocolClass.getCanonicalName(), PROTOCOL_ID);
+        AssertionUtils.notNull(subProtocolIdMap, "[{}] initialization has already been completed, please do not repeat the initialization", ProtocolManager.class.getSimpleName());
+        // 检查协议类是否合法
+        for (var protocolClass : protocolClassSet) {
+            var protocolId = getProtocolIdAndCheckClass(protocolClass);
+            AssertionUtils.isTrue(protocolId >= 0, "[class:{}] must use annotation @Protocol annotation", protocolClass.getCanonicalName());
+            initProtocolClass(protocolId, protocolClass);
+        }
+
+        // 协议id和协议信息对应起来
+        for (var protocolClass : protocolClassSet) {
+            var registration = parseProtocolRegistration(protocolClass, ProtocolModule.DEFAULT_PROTOCOL_MODULE);
+            protocols[registration.protocolId()] = registration;
+        }
+
+        // 通过指定类注册的协议，全部使用字节码增强
+        var enhanceList = Arrays.stream(protocols).filter(Objects::nonNull).toList();
+        enhance(generateOperation, enhanceList);
+    }
+
+    public static synchronized void analyzeAuto(List<Class<?>> protocolClassList, GenerateOperation generateOperation) {
+        AssertionUtils.notNull(subProtocolIdMap, "[{}] initialization has already been completed, please do not repeat the initialization", ProtocolManager.class.getSimpleName());
+        var relevantClassSet = new LinkedHashSet<Class<?>>(protocolClassList);
+        for (var clazz : protocolClassList) {
+            relevantClassSet.addAll(ClassUtils.relevantClass(clazz));
+        }
+        //var relevantClassList = relevantClassSet;
+       /*  var relevantClassList = relevantClassSet.stream()
+                .sorted((a, b) -> a.getCanonicalName().compareTo(b.getCanonicalName()))
+                .toList();*/
+
+        // 检查协议类是否合法
+        var noProtocolIds = new ArrayList<Class<?>>();
+        for (var protocolClass : relevantClassSet) {
+            var protocolId = getProtocolIdAndCheckClass(protocolClass);
+            if (protocolId >= 0) {
                 initProtocolClass(protocolId, protocolClass);
+            } else {
+                noProtocolIds.add(protocolClass);
             }
-
-            // 协议id和协议信息对应起来
-            for (var protocolClass : protocolClassSet) {
-                var registration = parseProtocolRegistration(protocolClass, ProtocolModule.DEFAULT_PROTOCOL_MODULE);
-                protocols[registration.protocolId()] = registration;
-            }
-
-            // 通过指定类注册的协议，全部使用字节码增强
-            var enhanceList = Arrays.stream(protocols).filter(Objects::nonNull).collect(Collectors.toList());
-            enhance(generateOperation, enhanceList);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
         }
+        var countProtocolId = (short) 0;
+        for (var protocolClass : noProtocolIds) {
+            while (protocolClassMap.containsKey(countProtocolId)) {
+                countProtocolId++;
+            }
+            initProtocolClass(countProtocolId, protocolClass);
+        }
+
+        // 协议id和协议信息对应起来
+        for (var protocolClass : relevantClassSet) {
+            var registration = parseProtocolRegistration(protocolClass, ProtocolModule.DEFAULT_PROTOCOL_MODULE);
+            protocols[registration.protocolId()] = registration;
+        }
+
+        // 通过指定类注册的协议，全部使用字节码增强
+        var enhanceList = Arrays.stream(protocols).filter(Objects::nonNull).toList();
+        enhance(generateOperation, enhanceList);
     }
 
-    public static synchronized void analyzeAuto(Set<Class<?>> protocolClassSet, GenerateOperation generateOperation) {
-        AssertionUtils.notNull(subProtocolIdMap, "[{}]已经初始完成，请不要重复初始化", ProtocolManager.class.getSimpleName());
-        try {
-            // 获取所有协议类
-            var relevantClassSet = new HashSet<>(protocolClassSet);
-            for (var clazz : protocolClassSet) {
-                relevantClassSet.addAll(ClassUtils.relevantClass(clazz));
-            }
-
-            var relevantClassList = relevantClassSet.stream()
-                    .sorted((a, b) -> a.getCanonicalName().compareTo(b.getCanonicalName()))
-                    .collect(Collectors.toList());
-
-            // 检查协议类是否合法
-            var noProtocolIds = new ArrayList<Class<?>>();
-            for (var protocolClass : relevantClassList) {
-                var protocolId = getProtocolIdAndCheckClass(protocolClass);
-                if (protocolId >= 0) {
-                    initProtocolClass(protocolId, protocolClass);
-                } else {
-                    noProtocolIds.add(protocolClass);
-                }
-            }
-            var countProtocolId = (short) 0;
-            for (var protocolClass : noProtocolIds) {
-                while (protocolClassMap.containsKey(countProtocolId)) {
-                    countProtocolId++;
-                }
-                initProtocolClass(countProtocolId, protocolClass);
-            }
-
-            // 协议id和协议信息对应起来
-            for (var protocolClass : relevantClassSet) {
-                var registration = parseProtocolRegistration(protocolClass, ProtocolModule.DEFAULT_PROTOCOL_MODULE);
-                protocols[registration.protocolId()] = registration;
-            }
-
-            // 通过指定类注册的协议，全部使用字节码增强
-            var enhanceList = Arrays.stream(protocols).filter(Objects::nonNull).collect(Collectors.toList());
-            enhance(generateOperation, enhanceList);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
+    /**
+     * EN: If the path of the package contains a classpath, the moduleId of the classpath is preferred, which means that the priority of the classpath will be higher.
+     * CN: 可以同时在一个protocol.xml文件中使用包路径和类路径。如果包的路径包含了类路径，则优先使用类路径的moduleId，也就是说类路径的优先级会更加的高。
+     */
     public static synchronized void analyze(XmlProtocols xmlProtocols, GenerateOperation generateOperation) {
-        AssertionUtils.notNull(subProtocolIdMap, "[{}]已经初始完成，请不要重复初始化", ProtocolManager.class.getSimpleName());
+        AssertionUtils.notNull(subProtocolIdMap, "[{}] initialization has already been completed, please do not repeat the initialization", ProtocolManager.class.getSimpleName());
+
+        var protocolXmlEnhanceMap = new HashMap<Class<?>, Boolean>();
+        var classModuleDefinitionMap = new HashMap<Class<?>, Byte>();
+        var moduleDefinitionClassMap = new HashMap<Byte, Set<Class<?>>>();
+
+        // 先注册类，再注册包
+        for (var moduleDefinition : xmlProtocols.getModules()) {
+            var moduleId = moduleDefinition.getId();
+            var module = new ProtocolModule(moduleId, moduleDefinition.getName());
+            AssertionUtils.isTrue(module.getId() > 0, "[module:{}] [id:{}] must be greater than or equal to 1", module.getName(), moduleId);
+            AssertionUtils.isNull(modules[module.getId()], "duplicate [module:{}] [id:{}] Exception!", module.getName(), moduleId);
+
+            modules[module.getId()] = module;
+            if (CollectionUtils.isEmpty(moduleDefinition.getProtocols())) {
+                continue;
+            }
+            //模块定义所有协议
+            var protocolModuleSet = moduleDefinitionClassMap.computeIfAbsent(module.getId(), it -> new HashSet<>());
+            for (var protocolDefinition : moduleDefinition.getProtocols()) {
+                var id = protocolDefinition.getId();
+                var location = protocolDefinition.getLocation();
+                var enhance = protocolDefinition.isEnhance();
+
+                // Use the class path first to obtain the class name, and search the directory if it cannot be obtained
+                // 优先使用类路径获取类名，获取不到才去搜索目录
+                Class<?> clazz = null;
+                try {
+                    clazz = ClassUtils.forName(location);
+                } catch (Exception e) {
+                }
+
+                // 如果定义的是类，则需要检查一下格式
+                if (clazz == null) {
+                    continue;
+                }
+
+                var protocolId = getProtocolIdAndCheckClass(clazz);
+                // 没有使用Protocol注解，则使用xml定义的protocolId
+                if (protocolId < 0) {
+                    if (id < 0) {
+                        throw new RunException("[{}] Can not find protocol id, use @Protocol annotation or specify id in xml", clazz.getSimpleName());
+                    }
+                    protocolId = id;
+                } else {
+                    if (id >= 0 && protocolId != id) {
+                        throw new RunException("[{}] @Protocol annotation id not equal to id in xml", clazz.getSimpleName());
+                    }
+                }
+
+                initProtocolClass(protocolId, clazz);
+                protocolModuleSet.add(clazz);
+                classModuleDefinitionMap.put(clazz, moduleId);
+                protocolXmlEnhanceMap.put(clazz, enhance);
+            }
+        }
+
+        // 再注册包路径，扫描包开始注册
+        for (var moduleDefinition : xmlProtocols.getModules()) {
+            var moduleId = moduleDefinition.getId();
+            var module = modules[moduleId];
+            if (CollectionUtils.isEmpty(moduleDefinition.getProtocols())) {
+                continue;
+            }
+
+            //模块定义所有协议
+            var protocolModuleSet = moduleDefinitionClassMap.computeIfAbsent(module.getId(), it -> new HashSet<>());
+            for (var protocolDefinition : moduleDefinition.getProtocols()) {
+                var id = protocolDefinition.getId();
+                var location = protocolDefinition.getLocation();
+                var enhance = protocolDefinition.isEnhance();
+
+                // Use the class path first to obtain the class name, and search the directory if it cannot be obtained
+                // 优先使用类路径获取类名，获取不到才去搜索目录
+                Class<?> clazz = null;
+                try {
+                    clazz = ClassUtils.forName(location);
+                } catch (Exception e) {
+                }
+
+                // 如果定义的是类，则需要检查一下格式
+                if (clazz != null) {
+                    continue;
+                }
+
+                var packetClazzList = scanPackageList(protocolDefinition.getLocation());
+                // 是类路径的话一定不能指定protocol id
+                if (CollectionUtils.isEmpty(packetClazzList)) {
+                    throw new RunException("can not scan any protocol class in [{}]", location);
+                }
+                if (id >= 0) {
+                    throw new RunException("When use package location, specify protocol id in xml");
+                }
+
+                for (Class<?> protocolClass : packetClazzList) {
+                    // 如果location已经指定过了，则优先使用class的绝对路径定义的moduleId
+                    if (classModuleDefinitionMap.containsKey(protocolClass)) {
+                        continue;
+                    }
+                    var protocolId = getProtocolIdAndCheckClass(protocolClass);
+                    initProtocolClass(protocolId, protocolClass);
+                    protocolModuleSet.add(protocolClass);
+                    classModuleDefinitionMap.put(protocolClass, moduleId);
+                    protocolXmlEnhanceMap.compute(protocolClass, (key, value) -> Boolean.TRUE.equals(value) || enhance);
+                }
+            }
+        }
+
+        var enhanceList = new ArrayList<IProtocolRegistration>();
+        for (var moduleDefinition : xmlProtocols.getModules()) {
+            var module = modules[moduleDefinition.getId()];
+            var packetClazzList = moduleDefinitionClassMap.get(moduleDefinition.getId());
+            if (CollectionUtils.isEmpty(packetClazzList)) {
+                continue;
+            }
+            for (Class<?> clazz : packetClazzList) {
+                var protocolId = ProtocolManager.protocolId(clazz);
+                var registration = parseProtocolRegistration(clazz, module);
+                // Protocol注解或者xml任意一个定义了增强协议，那么就增强协议
+                if ((clazz.isAnnotationPresent(Protocol.class) && clazz.getAnnotation(Protocol.class).enhance()) || protocolXmlEnhanceMap.get(clazz)) {
+                    enhanceList.add(registration);
+                }
+                // 注册协议
+                protocols[protocolId] = registration;
+            }
+        }
+
+        enhance(generateOperation, enhanceList);
+    }
+
+    public static List<Class<?>> scanPackageList(String location) {
+        // 获取该路径下所有类
+        var clazzNameSet = new HashSet<String>();
         try {
-            var enhanceList = new ArrayList<IProtocolRegistration>();
+            var clazzList = ClassUtils.getAllClasses(location);
+            clazzNameSet.addAll(clazzList);
+        } catch (Exception e) {
+            throw new RunException("[{}] scanning exception", location, e);
+        }
+        var classes = clazzNameSet.stream()
+                .map(it -> ClassUtils.forName(it))
+                .filter(it -> it.isAnnotationPresent(Protocol.class))
+                .filter(it -> !it.isInterface())
+                .filter(it -> !it.isEnum())
+                .distinct()
+                .toList();
+        return new ArrayList<>(classes);
+    }
 
-            for (var moduleDefinition : xmlProtocols.getModules()) {
-                var module = new ProtocolModule(moduleDefinition.getId(), moduleDefinition.getName());
-
-                AssertionUtils.isTrue(module.getId() > 0, "[module:{}] [id:{}] 模块必须大于等于1", module.getName(), module.getId());
-                AssertionUtils.isNull(modules[module.getId()], "duplicate [module:{}] [id:{}] Exception!", module.getName(), module.getId());
-                AssertionUtils.notNull(moduleDefinition.getProtocols(), "[module:{}] does not have any protocols", module.getName());
-
-                modules[module.getId()] = module;
-
-                for (var protocolDefinition : moduleDefinition.getProtocols()) {
-                    var location = protocolDefinition.getLocation();
-                    var clazz = Class.forName(location);
-                    var protocolId = protocolDefinition.getId();
-
-                    // 如果xml文件中没有填protocolId则只需要获取到protocolId即可
-                    if (protocolId < 0) {
-                        protocolId = getProtocolIdAndCheckClass(clazz);
-                        AssertionUtils.isTrue(protocolId >= 0, "[class:{}]在使用xml方式注册协议，如果xml没有提供协议号，则需要使用注解或者协议字段标注协议号", clazz.getCanonicalName());
-                    } else {
-                        var id = getProtocolIdAndCheckClass(clazz);
-                        // 使用xml方式注册协议可以，协议class不需要使用注解或者字段标注协议号
-                        if (id >= 0) {
-                            AssertionUtils.isTrue(protocolId == id, "[class:{}]协议序列号[{}]和协议文件里的协议序列号不相等", clazz.getCanonicalName(), PROTOCOL_ID);
-                        }
-                    }
-                    AssertionUtils.isTrue(protocolId >= moduleDefinition.getMinId(), "模块[{}]中的协议[{}]的协议号必须大于或者等于[{}]", moduleDefinition.getName(), clazz.getSimpleName(), moduleDefinition.getMinId());
-                    AssertionUtils.isTrue(protocolId < moduleDefinition.getMaxId(), "模块[{}]中的协议[{}]的协议号必须小于[{}]", moduleDefinition.getName(), clazz.getSimpleName(), moduleDefinition.getMaxId());
-                    initProtocolClass(protocolId, clazz);
-                }
-            }
-
-            for (var moduleDefinition : xmlProtocols.getModules()) {
-                var module = modules[moduleDefinition.getId()];
-                for (var protocolDefinition : moduleDefinition.getProtocols()) {
-                    var location = protocolDefinition.getLocation();
-                    var clazz = Class.forName(location);
-                    var protocolId = ProtocolManager.protocolId(clazz);
-                    var registration = parseProtocolRegistration(clazz, module);
-                    if (protocolDefinition.isEnhance()) {
-                        enhanceList.add(registration);
-                    }
-                    // 注册协议
-                    protocols[protocolId] = registration;
-                }
-            }
-            enhance(generateOperation, enhanceList);
+    public static void enhance(GenerateOperation generateOperation, List<IProtocolRegistration> enhanceList) {
+        try {
+            enhanceProtocolBefore(generateOperation);
+            enhanceProtocolRegistration(enhanceList);
+            enhanceProtocolAfter(generateOperation);
         } catch (Exception e) {
             throw new UnknownException(e);
         }
-    }
-
-    private static void enhance(GenerateOperation generateOperation, List<IProtocolRegistration> enhanceList) throws IOException, ClassNotFoundException, NotFoundException, CannotCompileException, NoSuchFieldException, InvocationTargetException, NoSuchMethodException, IllegalAccessException, InstantiationException {
-        enhanceProtocolBefore(generateOperation);
-        enhanceProtocolRegistration(enhanceList);
-        enhanceProtocolAfter(generateOperation);
     }
 
     private static void enhanceProtocolBefore(GenerateOperation generateOperation) throws IOException, ClassNotFoundException {
@@ -236,6 +331,9 @@ public class ProtocolAnalysis {
     }
 
     private static void enhanceProtocolRegistration(List<IProtocolRegistration> enhanceList) throws NoSuchMethodException, IllegalAccessException, InstantiationException, CannotCompileException, NotFoundException, InvocationTargetException, NoSuchFieldException {
+        if (GraalVmUtils.isGraalVM()) {
+            return;
+        }
         // 字节码增强
         for (var registration : enhanceList) {
             protocols[registration.protocolId()] = EnhanceUtils.createProtocolRegistration((ProtocolRegistration) registration);
@@ -261,50 +359,48 @@ public class ProtocolAnalysis {
             protocolIdPrimitiveMap = null;
         }
 
+        protocolClassMap = null;
         subProtocolIdMap = null;
         protocolReserved = null;
         baseSerializerMap = null;
+        unsupportedTypes = null;
 
         EnhanceUtils.clear();
-
-        if (CollectionUtils.isEmpty(generateOperation.getGenerateLanguages())) {
-            return;
-        }
-
-        GenerateProtocolNote.clear();
-        GenerateProtocolPath.clear();
-        GenerateProtocolFile.clear();
-        GenerateCppUtils.clear();
-        GenerateGoUtils.clear();
-        GenerateCsUtils.clear();
-        GenerateJsUtils.clear();
-        GenerateTsUtils.clear();
-        GenerateLuaUtils.clear();
-        GenerateGdUtils.clear();
-        GenerateProtobufUtils.clear();
     }
 
-    private static List<Field> customFieldOrder(Class<?> clazz) {
-        var notCompatibleFields = new ArrayList<Field>();
-        var compatibleFieldMap = new HashMap<Integer, Field>();
+    public static List<Field> getFields(Class<?> clazz) {
+        var fields = new ArrayList<Field>();
         for (var field : clazz.getDeclaredFields()) {
             var modifiers = field.getModifiers();
             if (Modifier.isTransient(modifiers) || Modifier.isStatic(modifiers)) {
                 continue;
             }
-            if (Modifier.isFinal(modifiers)) {
-                throw new RunException("[{}]协议号中的[field:{}]属性的访问修饰符不能为final", clazz.getCanonicalName(), field.getName());
+            if (!clazz.isRecord() && Modifier.isFinal(modifiers)) {
+                // 协议号中的属性的访问修饰符不能为final
+                throw new RunException("The access modifier for the [field:{}] attribute in the [{}] protocol number cannot be final", clazz.getCanonicalName(), field.getName());
             }
             if (!Modifier.isPublic(modifiers) && !Modifier.isPrivate(modifiers)) {
-                throw new RunException("[{}]协议号中的[field:{}]属性的访问修饰符必须是public或者private", clazz.getCanonicalName(), field.getName());
+                // 协议号中的属性的访问修饰符必须是public或者private
+                throw new RunException("The access modifier of the [field:{}] attribute in the [{}] protocol number must be public or private", clazz.getCanonicalName(), field.getName());
             }
 
             ReflectionUtils.makeAccessible(field);
+            fields.add(field);
+        }
+        return fields;
+    }
+
+    private static List<Field> customFieldOrder(Class<?> clazz, List<Field> fields) {
+        var notCompatibleFields = new ArrayList<Field>();
+        var compatibleFieldMap = new HashMap<Integer, Field>();
+        for (var field : fields) {
             if (field.isAnnotationPresent(Compatible.class)) {
-                var order = field.getAnnotation(Compatible.class).order();
+                var order = field.getAnnotation(Compatible.class).value();
                 var oldField = compatibleFieldMap.put(order, field);
                 if (oldField != null) {
-                    throw new RunException("[{}]协议号中的[field:{}]和[field:{}]不能有相同的Compatible顺序[order:{}]", clazz.getCanonicalName(), oldField.getName(), field.getName(), oldField, order);
+                    // 协议号中的属性不能有相同的Compatible order顺序
+                    throw new RunException("[field:{}] and [field:{}] in the [{}] protocol number cannot have the same Compatible order [order:{}]"
+                            , clazz.getCanonicalName(), oldField.getName(), field.getName(), oldField, order);
                 }
             } else {
                 notCompatibleFields.add(field);
@@ -320,33 +416,35 @@ public class ProtocolAnalysis {
                 .stream()
                 .sorted((a, b) -> a.getKey() - b.getKey())
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
         notCompatibleFields.addAll(compatibleFields);
         return notCompatibleFields;
     }
 
-    private static ProtocolRegistration parseProtocolRegistration(Class<?> clazz, ProtocolModule module) {
+    public static ProtocolRegistration parseProtocolRegistration(Class<?> clazz, ProtocolModule module) {
         var protocolId = ProtocolManager.protocolId(clazz);
+        var declaredFields = getFields(clazz);
         // 对象需要被序列化的属性
-        var fields = customFieldOrder(clazz);
+        var fields = customFieldOrder(clazz, declaredFields);
 
         try {
             var registrationList = new ArrayList<IFieldRegistration>();
+            boolean isRecord = clazz.isRecord();
             for (var field : fields) {
                 registrationList.add(toRegistration(clazz, field));
             }
 
-            var constructor = clazz.getDeclaredConstructor();
+            Constructor<?> constructor;
+            if (isRecord) {
+                constructor = ReflectionUtils.getConstructor(clazz, declaredFields.stream().map(p -> p.getType()).toList().toArray(new Class[]{}));
+            } else {
+                constructor = clazz.getDeclaredConstructor();
+            }
+
             ReflectionUtils.makeAccessible(constructor);
-            var protocol = new ProtocolRegistration();
-            protocol.setId(protocolId);
-            protocol.setConstructor(constructor);
-            protocol.setFields(ArrayUtils.listToArray(fields, Field.class));
-            protocol.setFieldRegistrations(ArrayUtils.listToArray(registrationList, IFieldRegistration.class));
-            protocol.setModule(module.getId());
-            return protocol;
+            return new ProtocolRegistration(protocolId, module.getId(), constructor, ArrayUtils.listToArray(fields, Field.class), ArrayUtils.listToArray(registrationList, IFieldRegistration.class));
         } catch (Exception e) {
-            throw new RuntimeException(StringUtils.format("解析协议[class:{}]异常", clazz), e);
+            throw new RuntimeException(StringUtils.format("Resolve protocol [class:{}] exception", clazz), e);
         }
     }
 
@@ -366,19 +464,22 @@ public class ProtocolAnalysis {
             return ArrayField.valueOf(registration, field.getType().getComponentType());
         } else if (Set.class.isAssignableFrom(fieldTypeClazz)) {
             if (!fieldTypeClazz.equals(Set.class)) {
-                throw new RunException("[class:{}]类型声明不正确，必须是Set接口类型", clazz.getCanonicalName());
+                // 必须是Set接口类型
+                throw new RunException("[class:{}] type declaration is incorrect, it must be of the Set interface type", clazz.getCanonicalName());
             }
 
             Type type = field.getGenericType();
 
             if (!(type instanceof ParameterizedType)) {
-                throw new RunException("[class:{}]类型声明不正确，不是泛型类[field:{}]", clazz.getCanonicalName(), field.getName());
+                // 必须是泛型类
+                throw new RunException("[class:{}] type declaration is incorrect, not a generic class[field:{}]", clazz.getCanonicalName(), field.getName());
             }
 
             Type[] types = ((ParameterizedType) type).getActualTypeArguments();
 
             if (types.length != 1) {
-                throw new RunException("[class:{}]中Set类型声明不正确，[field:{}]必须声明泛型类", clazz.getCanonicalName(), field.getName());
+                // Set类型必须声明泛型类
+                throw new RunException("Set type declaration in [class:{}] is incorrect, and the generic class must be declared in [field:{}]", clazz.getCanonicalName(), field.getName());
             }
 
             IFieldRegistration registration = typeToRegistration(clazz, types[0]);
@@ -386,19 +487,22 @@ public class ProtocolAnalysis {
         } else if (List.class.isAssignableFrom(fieldTypeClazz)) {
             // 是一个List
             if (!fieldTypeClazz.equals(List.class)) {
-                throw new RunException("[class:{}]类型声明不正确，必须是List接口类型", clazz.getCanonicalName());
+                // 必须是List接口类型
+                throw new RunException("[class:{}] type declaration is incorrect, it must be a List interface type", clazz.getCanonicalName());
             }
 
             Type type = field.getGenericType();
 
             if (!(type instanceof ParameterizedType)) {
-                throw new RunException("[class:{}]类型声明不正确，不是泛型类[field:{}]", clazz.getCanonicalName(), field.getName());
+                // List类型必须声明泛型类
+                throw new RunException("[class:{}] type declaration is incorrect, not a generic class[field:{}]", clazz.getCanonicalName(), field.getName());
             }
 
             Type[] types = ((ParameterizedType) type).getActualTypeArguments();
 
             if (types.length != 1) {
-                throw new RunException("[class:{}]中List类型声明不正确，[field:{}]必须声明泛型类", clazz.getCanonicalName(), field.getName());
+                // List类型必须声明泛型类
+                throw new RunException("List type declaration in [class:{}] is incorrect, and the generic class must be declared in [field:{}]", clazz.getCanonicalName(), field.getName());
             }
 
             IFieldRegistration registration = typeToRegistration(clazz, types[0]);
@@ -406,19 +510,22 @@ public class ProtocolAnalysis {
 
         } else if (Map.class.isAssignableFrom(fieldTypeClazz)) {
             if (!fieldTypeClazz.equals(Map.class)) {
-                throw new RunException("[class:{}]类型声明不正确，必须是Map接口类型", clazz.getCanonicalName());
+                // 必须是Map接口类型
+                throw new RunException("[class:{}] type declaration is incorrect, it must be a Map interface type", clazz.getCanonicalName());
             }
 
             Type type = field.getGenericType();
 
             if (!(type instanceof ParameterizedType)) {
-                throw new RunException("[class:{}]中数组类型声明不正确，[field:{}]不是泛型类", clazz.getCanonicalName(), field.getName());
+                // Map类型必须声明泛型类
+                throw new RunException("Map type declaration in [class:{}] is incorrect, and [field:{}] is not a generic class", clazz.getCanonicalName(), field.getName());
             }
 
             Type[] types = ((ParameterizedType) type).getActualTypeArguments();
 
             if (types.length != 2) {
-                throw new RunException("[class:{}]中数组类型声明不正确，[field:{}]必须声明泛型类", clazz.getCanonicalName(), field.getName());
+                // Map类型必须声明泛型类
+                throw new RunException("Map type declaration in [class:{}] is incorrect, and the generic class must be declared in [field:{}]", clazz.getCanonicalName(), field.getName());
             }
 
             IFieldRegistration keyRegistration = typeToRegistration(clazz, types[0]);
@@ -426,12 +533,13 @@ public class ProtocolAnalysis {
 
             return MapField.valueOf(keyRegistration, valueRegistration, type);
         } else {
+            checkUnsupportedType(fieldTypeClazz);
             // 是一个协议引用变量
-            if (!protocolIdMap.containsKey(field.getType())) {
-                throw new RunException("协议[{}]的子协议[{}]没有注册", clazz.getCanonicalName(), field.getType().getCanonicalName());
+            if (!protocolIdMap.containsKey(fieldTypeClazz)) {
+                throw new RunException("sub protocol:[{}] needs to register in protocol:[{}]", fieldTypeClazz.getCanonicalName(), clazz.getCanonicalName());
             }
             var protocolId = ProtocolManager.protocolId(clazz);
-            var subProtocolId = ProtocolManager.protocolId(field.getType());
+            var subProtocolId = ProtocolManager.protocolId(fieldTypeClazz);
             subProtocolIdMap.computeIfAbsent(protocolId, it -> new HashSet<>()).add(subProtocolId);
             return ObjectProtocolField.valueOf(subProtocolId);
         }
@@ -462,14 +570,16 @@ public class ProtocolAnalysis {
                 // 基础类型
                 return BaseField.valueOf(serializer);
             } else if (clazz.isArray()) {
-                // 是一个二维以上数组
-                throw new RunException("不支持多维数组或集合嵌套数组[type:{}]类型，仅支持一维数组", type);
+                // 不支持多维数组或集合嵌套数组类型，仅支持一维数组
+                throw new RunException("Multi-dimensional array  or set nested arrays [type:{}] types are not supported, only one-dimensional arrays are supported", type);
             } else if (clazz.equals(List.class) || clazz.equals(Set.class) || clazz.equals(Map.class)) {
-                throw new RunException("不支持数组和集合联合使用[type:{}]类型", type);
+                // 不支持数组和集合联合使用类型
+                throw new RunException("The combination of arrays and collections with the [type:{}] type is not supported", type);
             } else {
+                checkUnsupportedType(clazz);
                 // 是一个协议引用变量
                 if (!protocolIdMap.containsKey(clazz)) {
-                    throw new RunException("协议[{}]的子协议[{}]没有注册", currentProtocolClass.getCanonicalName(), clazz.getCanonicalName());
+                    throw new RunException("sub protocol:[{}] needs to register in protocol:[{}]", clazz.getSimpleName(), currentProtocolClass.getCanonicalName());
                 }
                 var protocolId = ProtocolManager.protocolId(currentProtocolClass);
                 var subProtocolId = ProtocolManager.protocolId(clazz);
@@ -477,15 +587,25 @@ public class ProtocolAnalysis {
                 return ObjectProtocolField.valueOf(subProtocolId);
             }
         }
-        throw new RunException("[type:{}]类型不正确", type);
+        throw new RunException("[type:{}] is incorrect", type);
     }
 
 
     /**
-     * 此方法仅在生成协议的时候调用，一旦运行，不能调用
+     * EN: This method is only called when the protocol is generated, and cannot be called once it is run
+     * CN: 此方法仅在生成协议的时候调用，一旦运行，不能调用
+     */
+    public static Set<Short> getFirstSubProtocolIds(short protocolId) {
+        return subProtocolIdMap.getOrDefault(protocolId, Collections.emptySet());
+    }
+
+    /**
+     * EN: This method is only called when the protocol is generated, and cannot be called once it is run
+     * CN: 此方法仅在生成协议的时候调用，一旦运行，不能调用
      */
     public static Set<Short> getAllSubProtocolIds(short protocolId) {
-        AssertionUtils.notNull(subProtocolIdMap, "[{}]已经初始完成，初始化完成过后不能调用getAllSubProtocolIds", ProtocolAnalysis.class.getSimpleName());
+        // 初始化完成过后不能调用getAllSubProtocolIds
+        AssertionUtils.notNull(subProtocolIdMap, "[{}] has been initially completed, and after the initialization is completed, you cannot call getAllSubProtocolIds", ProtocolAnalysis.class.getSimpleName());
 
         if (!subProtocolIdMap.containsKey(protocolId)) {
             return Collections.emptySet();
@@ -499,8 +619,10 @@ public class ProtocolAnalysis {
             var firstSubProtocolId = queue.poll();
             if (subProtocolIdMap.containsKey(firstSubProtocolId)) {
                 for (var subClassId : subProtocolIdMap.get(firstSubProtocolId)) {
+                    // 不支持循环引用协议
                     if (subClassId == protocolId) {
-                        throw new RunException("[class:{}]在下层协议[class:{}]包含循环引用协议[class:{}]", protocolClass.getSimpleName(), protocols[firstSubProtocolId].protocolConstructor().getDeclaringClass(), protocolClass.getSimpleName());
+                        throw new RunException("[class:{}] contains circular reference protocol[class:{}] in the lower level protocol[class:{}]"
+                                , protocolClass.getSimpleName(), protocols[firstSubProtocolId].protocolConstructor().getDeclaringClass(), protocolClass.getSimpleName());
                     }
 
                     if (!allSubProtocolIdSet.contains(subClassId)) {
@@ -515,62 +637,48 @@ public class ProtocolAnalysis {
 
     // 协议智能语法分析，错误的协议定义将无法启动程序并给出错误警告
     //-----------------------------------------------------------------------
-    private static void initProtocolClass(short protocolId, Class<?> clazz) {
+    public static void initProtocolClass(short protocolId, Class<?> clazz) {
+        // 协议号重复定义
+        if (protocolIdMap.containsKey(clazz)) {
+            throw new RunException("duplicate protocol:[{}] protocolId:[{}] and [protocolId:{}]", clazz.getSimpleName(), protocolIdMap.get(clazz), protocolId);
+        }
         protocolIdMap.put(clazz, protocolId);
         protocolIdPrimitiveMap.putPrimitive(clazz.hashCode(), protocolId);
-        var previous = protocolClassMap.put(protocolId, clazz);
-        if (previous != null) {
-            throw new RunException("[{}][{}]协议号[protocolId:{}]重复", clazz.getCanonicalName(), previous.getCanonicalName(), protocolId);
+        var previousProtocolClass = protocolClassMap.put(protocolId, clazz);
+        // 协议号重复
+        if (previousProtocolClass != null) {
+            throw new RunException("[{}][{}] protocol number [protocolId:{}] is repeated", clazz.getCanonicalName(), previousProtocolClass.getCanonicalName(), protocolId);
         }
     }
 
     public static short getProtocolIdAndCheckClass(Class<?> clazz) {
+        checkUnsupportedType(clazz);
         // 是否为一个简单的javabean
         ReflectionUtils.assertIsPojoClass(clazz);
-        // 是否实现了IPacket接口
-        AssertionUtils.isTrue(IPacket.class.isAssignableFrom(clazz), "[class:{}]没有实现接口[IPacket:{}]", clazz.getCanonicalName(), IPacket.class.getCanonicalName());
         // 不能是泛型类
-        AssertionUtils.isTrue(ArrayUtils.isEmpty(clazz.getTypeParameters()), "[class:{}]不能是泛型类", clazz.getCanonicalName());
+        AssertionUtils.isTrue(ArrayUtils.isEmpty(clazz.getTypeParameters()), "[class:{}] can't be a generic class", clazz.getCanonicalName());
 
-        Field protocolIdField = null;
-        try {
-            protocolIdField = clazz.getDeclaredField(PROTOCOL_ID);
-        } catch (NoSuchFieldException e) {
-        }
-        Method protocolMethod = null;
-        try {
-            protocolMethod = clazz.getDeclaredMethod(PROTOCOL_METHOD);
-        } catch (NoSuchMethodException e) {
+        // 普通Pojo必须要有一个空的构造器
+        if (!clazz.isRecord()) {
+            Constructor<?> constructor = ReflectionUtils.publicEmptyConstructor(clazz);
         }
 
-        // 必须要有一个空的构造器
-        Constructor<?> constructor = ReflectionUtils.publicEmptyConstructor(clazz);
-
-        var protocolClass = clazz.getDeclaredAnnotation(Protocol.class);
+        var protocolAnnotation = clazz.getDeclaredAnnotation(Protocol.class);
         short protocolId = -1;
-        if (protocolClass != null && protocolClass.id() != 0) {// 注解标注的协议号
-            protocolId = protocolClass.id();
-            AssertionUtils.isTrue(protocolIdField == null && protocolMethod == null, "[class:{}]已经使用了注解标注协议号，不能再使用protocolId()方法和[{}]字段", clazz.getCanonicalName(), PROTOCOL_ID);
-        } else if (protocolIdField != null || protocolMethod != null) { // 字段标注的协议号
-            AssertionUtils.isTrue(protocolIdField != null, "[class:{}]协议序列号[{}]不存在", clazz.getCanonicalName(), PROTOCOL_ID);
-            AssertionUtils.isTrue(Modifier.isPublic(protocolIdField.getModifiers()), "[class:{}]协议序列号[{}]没有被public修饰", clazz.getCanonicalName(), PROTOCOL_ID);
-            AssertionUtils.isTrue(Modifier.isStatic(protocolIdField.getModifiers()), "[class:{}]协议序列号[{}]没有被static修饰", clazz.getCanonicalName(), PROTOCOL_ID);
-            AssertionUtils.isTrue(Modifier.isFinal(protocolIdField.getModifiers()), "[class:{}]协议序列号[{}]没有被final修饰", clazz.getCanonicalName(), PROTOCOL_ID);
-            AssertionUtils.isTrue(clazz.getSimpleName().matches("[a-zA-Z0-9_]*"), "[class:{}]的命名只能包含字母，数字，下划线", clazz.getCanonicalName(), PROTOCOL_ID);
-
-            ReflectionUtils.makeAccessible(protocolIdField);
-            protocolId = (short) ReflectionUtils.getField(protocolIdField, null);
-            // 验证protocol()方法的返回是否和PROTOCOL_ID相等
-            if (protocolMethod != null) {
-                var packet = (IPacket) ReflectionUtils.newInstance(constructor);
-                var methodReturnId = (short) ReflectionUtils.invokeMethod(packet, protocolMethod);
-                AssertionUtils.isTrue(methodReturnId == protocolId, "[class:{}]的protocolId方法返回的值[{}]和协议号返回值[{}]不相等", clazz.getCanonicalName(), methodReturnId, protocolId);
-            }
-        } else {
-            // 可能通过xml的方式注册协议，xml注册协议不需要注解和PROTOCOL_ID协议字段号
+        if (protocolAnnotation != null) {
+            protocolId = protocolAnnotation.id();
         }
 
         return protocolId;
+    }
+
+    private static void checkUnsupportedType(Class<?> clazz) {
+        if (clazz.isEnum()) {
+            throw new RunException("[{}] enum is not supported, since other language not support enum", clazz.getSimpleName());
+        }
+        if (unsupportedTypes.stream().anyMatch(it -> clazz.isAssignableFrom(it))) {
+            throw new RunException("[{}] is not supported, since other language not support it", clazz.getSimpleName());
+        }
     }
 
     private static void checkAllModules() {
@@ -578,14 +686,14 @@ public class ProtocolAnalysis {
         var moduleIdSet = new HashSet<Byte>();
         Arrays.stream(modules)
                 .filter(Objects::nonNull)
-                .peek(it -> AssertionUtils.isTrue(!moduleIdSet.contains(it.getId()), "模块[{}]存在重复的id，模块的id不能重复", it))
+                .peek(it -> AssertionUtils.isTrue(!moduleIdSet.contains(it.getId()), "duplicate id in module [{}], and the id of modules cannot be duplicated", it))
                 .forEach(it -> moduleIdSet.add(it.getId()));
 
         // 模块名称不能重复
         var moduleNameSet = new HashSet<String>();
         Arrays.stream(modules)
                 .filter(Objects::nonNull)
-                .peek(it -> AssertionUtils.isTrue(!moduleNameSet.contains(it.getName()), "模块[{}]存在重复的name，模块名称不能重复", it))
+                .peek(it -> AssertionUtils.isTrue(!moduleNameSet.contains(it.getName()), "duplicate name in module [{}], and the module name cannot be duplicated", it))
                 .forEach(it -> moduleNameSet.add(it.getName()));
     }
 
@@ -601,78 +709,73 @@ public class ProtocolAnalysis {
 
             var protocolClass = protocolRegistration.protocolConstructor().getDeclaringClass();
             var protocolName = protocolClass.getSimpleName();
+            // 协议不能含有重复的名称
             if (allProtocolNameMap.containsKey(protocolName)) {
-                throw new RunException("[class:{}]和[class:{}]协议名称重复，协议不能含有重复的名称", protocolClass.getCanonicalName(), allProtocolNameMap.get(protocolName).getCanonicalName());
+                throw new RunException("[class:{}] and [class:{}] has duplicate protocol name, protocol cannot contain duplicate names"
+                        , protocolClass.getCanonicalName(), allProtocolNameMap.get(protocolName).getCanonicalName());
             }
 
+            //协议的名称不能是保留名称
             if (protocolReserved.stream().anyMatch(it -> it.equalsIgnoreCase(protocolName))) {
-                throw new RunException("协议的名称[class:{}]不能是保留名称[{}]", protocolClass.getCanonicalName(), protocolName);
+                throw new RunException("The name of the protocol [class:{}] cannot be a reserved name [{}]", protocolClass.getCanonicalName(), protocolName);
             }
 
             allProtocolNameMap.put(protocolName, protocolClass);
         }
 
 
-        //拓扑排序检查循环协议
-        if(subProtocolIdMap.isEmpty()){
+        // 拓扑排序检查循环协议
+        if (subProtocolIdMap.isEmpty()) {
             return;
         }
-        //先判断自循环引用
+        // 先判断自循环引用
         for (var protocolEntry : subProtocolIdMap.entrySet()) {
             var protocolId = protocolEntry.getKey();
             var subProtocolSet = protocolEntry.getValue();
             if (subProtocolSet.contains(protocolId)) {
                 var protocolClass = protocols[protocolId].protocolConstructor().getDeclaringClass();
-                throw new RunException("[class:{}]中存在自循环引用", protocolClass.getSimpleName());
+                throw new RunException("[class:{}] cannot be circular reference protocol", protocolClass.getSimpleName());
             }
         }
-        //入度
-        var inDegree=new HashMap<Short,Integer>();
-        //初始化入度
-        for(var protocolEntry : subProtocolIdMap.entrySet())
-        {
-            var protocolId=protocolEntry.getKey();
-            inDegree.put(protocolId,inDegree.getOrDefault(protocolId,0));
+        // 入度
+        var inDegree = new HashMap<Short, Integer>();
+        // 初始化入度
+        for (var protocolEntry : subProtocolIdMap.entrySet()) {
+            var protocolId = protocolEntry.getKey();
+            inDegree.put(protocolId, inDegree.getOrDefault(protocolId, 0));
             var subProtocolSet = protocolEntry.getValue();
-            for(var subProtocolId:subProtocolSet)
-            {
-                inDegree.put(subProtocolId,inDegree.getOrDefault(subProtocolId,0)+1);
+            for (var subProtocolId : subProtocolSet) {
+                inDegree.put(subProtocolId, inDegree.getOrDefault(subProtocolId, 0) + 1);
             }
         }
-        var queue=new LinkedList<Short>();
-        for(var protocolEntry:inDegree.entrySet())
-        {
-            var protocolInDegree=protocolEntry.getValue();
-            if(protocolInDegree==0)
-            {
+        var queue = new LinkedList<Short>();
+        for (var protocolEntry : inDegree.entrySet()) {
+            var protocolInDegree = protocolEntry.getValue();
+            if (protocolInDegree == 0) {
                 queue.offer(protocolEntry.getKey());
             }
         }
-        while(!queue.isEmpty())
-        {
-            var protocolId=queue.poll();
-            if(subProtocolIdMap.containsKey(protocolId)){
-                for(var subProtocolId:subProtocolIdMap.get(protocolId))
-                {
-                    inDegree.put(subProtocolId,inDegree.get(subProtocolId)-1);
-                    if(inDegree.get(subProtocolId)==0)
-                    {
+        while (!queue.isEmpty()) {
+            var protocolId = queue.poll();
+            if (subProtocolIdMap.containsKey(protocolId)) {
+                for (var subProtocolId : subProtocolIdMap.get(protocolId)) {
+                    inDegree.put(subProtocolId, inDegree.get(subProtocolId) - 1);
+                    if (inDegree.get(subProtocolId) == 0) {
                         queue.offer(subProtocolId);
                     }
                 }
             }
         }
-        var circularReferenceProtocols=new ArrayList<String>();
-        //入度不为0的表示存在循环引用的协议
-        for(var protocolEntry:inDegree.entrySet())
-        {
-            if(protocolEntry.getValue()>0){
+        var circularReferenceProtocols = new ArrayList<String>();
+        // 入度不为0的表示存在循环引用的协议
+        for (var protocolEntry : inDegree.entrySet()) {
+            if (protocolEntry.getValue() > 0) {
                 circularReferenceProtocols.add(protocols[protocolEntry.getKey()].protocolConstructor().getDeclaringClass().getSimpleName());
             }
         }
-        //抛出所有存在循环引用的协议类名
-        if(circularReferenceProtocols.size()>0){
-            throw new RunException("[class:{}]中存在循环引用",StringUtils.joinWith(",",circularReferenceProtocols.toArray()));
+        // 抛出所有存在循环引用的协议类名
+        if (!circularReferenceProtocols.isEmpty()) {
+            throw new RunException("[class:{}] cannot be circular reference protocol", StringUtils.joinWith(",", circularReferenceProtocols.toArray()));
         }
     }
 
